<resources>
    <string name="app_name">侧滑测试Demo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">侧滑页面</string>
    <string name="title_activity_scroll">滑动控件侧滑</string>

    <string name="second_page_button">跳转侧滑页面</string>
    <string name="component_page_button">跳转带有滑动控件的页面</string>

    <string name="slide_edge_toggle">开启边缘侧滑\n(当前全局侧滑</string>
    <string name="slide_full_toggle">开启全局侧滑\n(当前边缘侧滑)</string>
    <string name="slide_forbid_toggle">禁止侧滑\n(当前侧滑开启)</string>
    <string name="slide_enable_toggle">开启侧滑\n(当前侧滑禁止)</string>

    <string name="show_recylceview">显示RecyclerView</string>
    <string name="show_scrollview">显示ScrollView</string>
    <string name="show_viewpager">显示ViewPager</string>

    <string name="edge_response_percent">边缘响应的最大值:屏幕宽度的</string>
    <string name="close_page_percent">非快速滑动，关闭页面的最小值:屏幕宽度的</string>

    <string name="page">页面</string>

    <string name="test">2005年因参加选秀节目《我型我秀》而正式出道，2006年6月9日，发行首张个人原创同名专辑《薛之谦》，包揽了六首曲和五首词的创作[1]  。《认真的雪》打榜成绩和彩铃下载量更是名列前茅，一直成为各大排行榜上的常客，专辑销量1个月破20万张。[2]
时尚写真
时尚写真(9张)
2007年7月31日发行第二张个人原创专辑《你过得好吗》。短短一个月时间，销量迅速突破15万，获中歌榜冠军。[16]  同年，薛之谦受邀作为流行音乐的代表，和其他艺术家一起前往俄罗斯，参加由中华人民共和国文化部，和俄罗斯联邦文化电影署联合举办的中国文化节重点项目”沿伏尔加河友谊之旅”，在沿河11个城市作访问演出。[3]
2008年11月26日发行第三张个人原创专辑《深深爱过你》，同名主打歌《深深爱过你》荣登中歌榜等榜单首位，2009年获第9届全球华语歌曲排行榜最受欢迎二十大金曲奖。[17]  12月20日举行首场演唱会“谦年传说”。[4]  2008年，薛之谦当选火炬手，在河南省郑州市传递火炬[18]
2009年9月21日推出单曲《未完成的歌》，这是薛之谦逾一年的创作，迟迟没有发表是因为一直没有很好的词来配合这首曲，所以他一直等到能让他觉得感动的歌词。2009年12月11日发行新歌+精选集《未完成的歌》。[19]

2010年薛之谦跨界影视，主演了个人首部大银幕作品《一只狗的大学时光》[20]  。
2011年3月14日，推出单曲《我终于成了别人的女人》，这首歌曲的编曲由音乐人常石磊编写，音乐录影带由周杰伦的御用导演珍妮花拍摄[21]  。
2012年，主演青春励志片《音乐江湖》，在片中饰演了性格内向、对音乐执着的学生陈浩，并演唱影片主题曲《我们爱过就好》[22]  ；7月17日，发行
薛之谦
薛之谦(11张)
 专辑《几个薛之谦》，专辑筹备期长达两年半。期间，薛之谦陆续发行《我终于成了别人的女人》、《伏笔》、《几个你》等多首单曲[23]  。该唱片获2013年MusicRadio中国TOP排行榜内地推荐唱片奖[24]  。第二波深情主打《我知道你都知道》被湖南卫视最新大戏《胜女的代价》收为主插曲[25]  ；同年，薛之谦第一家“上上谦”火锅店开业，现已扩张到五家店。之后薛之谦又自创了女装品牌UUJULY、童装品牌UUJULYKIDS、男装品牌Dangerous People[5]  。
2013年11月，发行专辑《意外》，并凭借该专辑获得第21届东方风云榜十大金曲奖。其中收录了主打歌《丑八怪》以及插曲《意外》、《你还要我怎样》、《方圆几里》等在内的10首歌曲[6]  。凭借新专辑《意外》在东方风云榜拿下最佳唱作人和十大金曲两座大奖。[26]
2015年6月8日，推出原创EP《绅士》，收录了《绅士》、《演员》、《下雨了》在内的3首歌曲[7]  ；10月26日，推出个人原创EP《一半》[28]  ，EP发布后试听量一路飙升，夺得多家权威音乐榜单冠军位，11月10日，薛之谦在北京举行EP《一半》试听量破亿庆功会[29]  。11月19日，单曲《Stay Here》MV首发，纪念自己曾经的倔强和已逝去的爱情[30]  ；同年，搭档朴海镇、张亮主演都市爱情剧《男人帮·朋友》[31]  ；10月5日，其主演的都市励志剧《妈妈像花儿一样》播出，并在剧中饰演“多情小叔子”张来福[9]  。
综艺活动
综艺活动(17张)
2016年，凭借歌曲《演员》、《一半》获得酷音乐亚洲盛典“年度电视音乐金曲艺人”、“年度电视音乐金曲艺人”； 5月17日，发行EP《初学者》[11]  ，同时也是爱情喜剧片《A测试之爱情大冒险》的主题曲，该电影是由薛之谦首次特别主演[32]  ，歌曲首发后评论数在一天突破8万，两天突破10万[33]  。6月1日，MV上线，这首歌是薛之谦独自包揽词曲，此次再度与金曲奖最佳音乐录像带奖得主黄中平导演合作拍MV[34]  ；6月4日，参加真人秀节目《挑战者联盟》[35]  ；6月7日，发行原创单曲《刚刚好》[36]  ；6月17日，薛之谦《初学者》专辑的第二波伤情主打歌《刚刚好》MV正式首发[36]  ；6月24日，推出个人原创单曲《我好像在哪见过你》，同时也是魔幻动画片《精灵王座》的主题曲；6月30日，参加中韩偶像互动音乐节目《作战吧偶像》[37]  ；7月2日，参加湖南卫视音乐节目《中国新声代第四季》[38]  ；7月17日，在北京举办《初学者》免费首唱会，7月18日新专辑《初学者》全网正式上线，实体专辑将制作CD碟及限量版，黑胶两个版本，将于8月初开售[39]  。9月12日，薛之谦携手黄龄献唱由导演冯小刚执导的电影《我不是潘金莲》的推广曲。[15]  9月15日，薛之谦担任《中国新歌声》第五战队队长强势踢馆《中国新歌声》。</string>

    <string name="fresco_page_button">跳转到带图片的页面</string>

    <string name="fresco_another_page_button">跳转到另一个带图片的页面</string>

</resources>
