<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.oubowu.slideback.demo.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_rv"
            android:checked="true"
            android:orderInCategory="100"
            android:title="@string/show_recylceview"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_nsv"
            android:orderInCategory="100"
            android:title="@string/show_scrollview"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_vp"
            android:orderInCategory="100"
            android:title="@string/show_viewpager"
            app:showAsAction="never"/>
    </group>
</menu>
