<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_second"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.oubowu.slideback.demo.SecondActivity"
    tools:showIn="@layout/activity_second">

    <Button
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="enableEdgeSlide"
        android:text="@string/slide_edge_toggle"/>

    <Button
        android:id="@+id/bt2"
        android:layout_width="match_parent"
        android:layout_below="@+id/bt1"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="disableSlide"
        android:text="@string/slide_forbid_toggle"/>



    <TextView
        android:id="@+id/tv_edge_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt2"
        android:layout_marginTop="20dp"/>

    <SeekBar
        android:id="@+id/sb_edge_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_edge_range"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="0"/>

    <TextView
        android:id="@+id/tv_slide_out_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sb_edge_range"
        android:layout_marginTop="20dp"/>

    <SeekBar
        android:id="@+id/sb_slide_out_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_slide_out_range"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="0"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/sb_slide_out_range"
        android:onClick="jump"
        android:layout_marginTop="20dp"
        android:text="@string/second_page_button"/>

</RelativeLayout>
